--- a/src/component/Post.css
+++ b/src/component/Post.css
@@ -14,8 +14,11 @@
     font-size: 14px;
 }
 .post__text{
+    background-color: white;
     font-weight: normal;
-    padding: 0 20px;
+    /* padding: 0 20px; */
+    border: 1px solid lightgray;
+    width: 100%;
 }
 .post__header{
     display: flex;
