--- a/src/component/Stories.css
+++ b/src/component/Stories.css
@@ -8,6 +8,7 @@
     background: white;
     border: 1px solid lightgray;
     overflow-x: hidden;
+    min-height: 112px;
 }
 .stories__profile{
     margin: 18px 10px;
