--- a/src/component/Post.css
+++ b/src/component/Post.css
@@ -6,9 +6,6 @@
     background: white;
     object-fit: contain;
     width: 100%;
-    border-left: 1px solid lightgray;
-    border-right: 1px solid lightgray;
-    border-bottom: 1px solid lightgray;
 }
 .post__username{
     font-size: 14px;
@@ -16,9 +13,10 @@
 .post__text{
     background-color: white;
     font-weight: normal;
-    /* padding: 0 20px; */
-    border: 1px solid lightgray;
-    width: 100%;
+    font-size: 12px;
+    padding: 0 10px;
+    border-left: 1px solid lightgray;
+    border-right: 1px solid lightgray;
 }
 .post__header{
     display: flex;
@@ -29,4 +27,23 @@
 }
 .post__avatar{
     margin: 10px;
+}
+.post__footer{
+    display: flex;
+    align-items: center;
+    background: white;
+    border: 1px solid lightgray;
+    /* width: 100%; */
+    margin-bottom: 20px;
+    min-height: 40px;
+    padding-left: 15px;
+    border-top: 0;
+}
+.post__element{
+    border: 1px solid lightgray;
+    width: 100%;
+    border-bottom: 0;
+}
+.float-right{
+    float: right;
 }
